--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
