--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.0",
     "react": "^16.6.3",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^16.6.3",
     "react-popper": "^2.2.5",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^2.3.0",
     "reactstrap": "^8.10.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
